--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-numpy
-pandas
-matplotlib
-plotly
-openpyxl
+streamlit==1.36.0
+numpy==1.26.4
+pandas==2.2.2
+plotly==5.22.0
+openpyxl==3.1.5
 
